# TrustLedger

./: .coderabbit.yaml  .dockerignore  .env.example  .env.local.example  .eslintrc.config.mjs  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .graphifyignore  .markdownlint-logs.json  .markdownlint.json  .markdownlintignore  .mcp.json  .node-version  .npmrc  .nvmrc  .prettierignore  .prettierrc.json  .python-version  .solhint.json  .stylelintrc.json  .vercelignore  ACCEPTABLE_USE_POLICY.md  AGENT-CONTEXT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMUNITY_GUIDELINES.md  CONTENT_POLICY.md  COOKIE_POLICY.md  CREDITS.md  Cargo.toml  DESIGN.md  DISCLAIMER 2.md  DISCLAIMER.md  DMCA_POLICY.md  Dockerfile  FAQ.md  (+31 more)
.claude/: settings.json
.codex/: AGENTS.md  config.toml  hooks.json
.continue/: README.md
.copilot/: instructions.md  mcp-config.json
.cursor/: .gitignore  mcp.json
.gemini/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  trufflehog-exclude.txt
.husky/: post-merge  pre-commit  pre-push
.impeccable/: design.json
.serena/: .gitignore  project.yml
.sixth/: README.md
.swc/: .gitignore  README.md  policy.json
artifacts/: deployed-addresses.json
audits/: AGENT-GUIDE.md  GOVERNANCE.md  README.md
contracts/: .gas-snapshot  foundry.toml
database/: README.md  migrations  verify.mjs
demo/: generate_contract.py  requirements.txt
docker/: Dockerfile.ci  Dockerfile.dev  Dockerfile.frontend  docker-compose.dev.yml
docs/: ACCEPTABLE_USE_POLICY.md  ADMIN.md  AGENT-CONTEXT.md  ANALYTICS.md  ARBITRATION.md  ARCHITECTURE.md  AUDIT-READINESS.md  CI-CD.md  CODERABBIT.md  CONTRACTS.md  CONTRIBUTING.md  CORE.md  CREDITS.md  DEMO.md  DEPLOYMENT.md  DISCLAIMER.md  DOCKER.md  ENVIRONMENT.md  ESCROW-LIFECYCLE.md  FAQ.md  FAUCETS.md  FRONTEND.md  GITHUB-RULESETS.md  GITHUB_MODELS.md  Home.md  INFRA.md  KUBERNETES.md  LEGAL.md  MISCELLANEOUS.md  NOTES-ARCHIVE.md  ORACLE.md  PRESENTATION.md  QUALITY-STANDARDS.md  RISK_DISCLOSURE.md  SECURITY.md  SMART-CONTRACTS.md  SOLANA.md  STUBS.md  SWC.md  TERMS_AND_CONDITIONS.md  (+8 more)
frontend/: .env.local.example  next.config.ts  package-lock.json
infra/: AGENTS.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  (+6 more)
programs/admin-api/: Cargo.toml  README.md
programs/admin-api/src/: main.rs
programs/solana-escrow/: Cargo.toml  README.md
programs/solana-escrow/src/: lib.rs
programs/solana-staking/: Cargo.toml  README.md
programs/solana-staking/src/: lib.rs
(+736 files in other folders)
