[package]
name = "trustledger-solana-escrow"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kevinle3212/TrustLedger"
rust-version = "1.82"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2"
solana-sdk-ids = "2"
solana-system-interface = "1"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_docs = "deny"
unexpected_cfgs = "allow"

[lints.clippy]
all = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
